[gd_scene load_steps=17 format=3 uid="uid://d3i0h7ctlmm2r"]

[ext_resource type="Script" path="res://Enemy/Boss/boss.gd" id="1_hfbkv"]
[ext_resource type="Texture2D" uid="uid://c31hj0c1cmsuq" path="res://icon.svg" id="2_mxe4o"]
[ext_resource type="Script" path="res://Enemy/enemy_hurt_box.gd" id="3_024jo"]
[ext_resource type="PackedScene" uid="uid://dtr7u42wps8dk" path="res://OtherComponents/HealthBar/health_bar.tscn" id="3_udodu"]
[ext_resource type="AudioStream" uid="uid://d2fsjv4d7gmfr" path="res://Assets/Sounds/hit.wav" id="4_irfha"]
[ext_resource type="PackedScene" uid="uid://d356moy0s5ygo" path="res://Enemy/Boss/boss_player_detection.tscn" id="5_djr86"]
[ext_resource type="PackedScene" uid="uid://dq6joq70c5llr" path="res://OtherComponents/SingleBulletAttack/single_bullet_attack.tscn" id="6_hmoqa"]
[ext_resource type="PackedScene" uid="uid://bx7nhba8s6f20" path="res://Enemy/enemy_navigation.tscn" id="7_ehxm1"]
[ext_resource type="AudioStream" uid="uid://cb0dvo6anoc1i" path="res://Assets/Sounds/laser_shot.wav" id="9_o01r7"]
[ext_resource type="PackedScene" uid="uid://osadm8a0pgm3" path="res://OtherComponents/States/state_machine.tscn" id="10_qx70k"]
[ext_resource type="PackedScene" uid="uid://ctinyr32vfngs" path="res://OtherComponents/States/BossStates/chase.tscn" id="11_npgb5"]
[ext_resource type="PackedScene" uid="uid://cju77tvnkva5n" path="res://OtherComponents/States/BossStates/idle.tscn" id="12_kmqhc"]
[ext_resource type="PackedScene" uid="uid://chs37re5c5rql" path="res://OtherComponents/States/BossStates/attack.tscn" id="13_5gtif"]
[ext_resource type="PackedScene" uid="uid://cbil5bw6jj1o1" path="res://OtherComponents/States/BossStates/search.tscn" id="14_5wo2i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x37nr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_btnb1"]

[node name="Boss" type="CharacterBody2D" groups=["boss"]]
z_index = 2
rotation = 1.5708
collision_layer = 2
collision_mask = 11
motion_mode = 1
script = ExtResource("1_hfbkv")

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(1, 0.113725, 0.105882, 1)
scale = Vector2(0.156, 0.156)
texture = ExtResource("2_mxe4o")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x37nr")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="AfterSpinCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource("3_024jo")

[node name="Collision" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_btnb1")

[node name="SoundEffect" type="AudioStreamPlayer2D" parent="HurtBox"]
stream = ExtResource("4_irfha")
volume_db = -10.0

[node name="HealthBar" parent="." instance=ExtResource("3_udodu")]
offset_left = -18.0
offset_top = 5.00006
offset_right = 202.0

[node name="SingleBulletAttack" parent="." instance=ExtResource("6_hmoqa")]

[node name="PlayerDetection" parent="." instance=ExtResource("5_djr86")]
rotation = -1.57079

[node name="EnemyNavigation" parent="." instance=ExtResource("7_ehxm1")]

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_o01r7")
volume_db = -10.0
max_distance = 1000.0

[node name="StateMachine" parent="." instance=ExtResource("10_qx70k")]
initial_state = NodePath("Idle")

[node name="Idle" parent="StateMachine" instance=ExtResource("12_kmqhc")]

[node name="Chase" parent="StateMachine" instance=ExtResource("11_npgb5")]

[node name="Attack" parent="StateMachine" instance=ExtResource("13_5gtif")]

[node name="Search" parent="StateMachine" instance=ExtResource("14_5wo2i")]

[connection signal="died" from="." to="." method="_on_died"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="AfterSpinCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="HurtBox" to="HurtBox" method="_on_body_entered"]
[connection signal="mouse_entered" from="HurtBox" to="HurtBox" method="_on_mouse_entered"]
